Fixed z-index for clock hands

--- a/style.css
+++ b/style.css
@@ -57,6 +57,6 @@ body {
   position: absolute;
   top: 50%;
   left: 45%;
-  z-index: 2;
+  z-index: 1;
   background-color: black;
 }
